updated code in active and inactive

--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
       "host": "localhost",
       "port": 3306,
       "user": "root",
-      "password": "1234",
-      "database": "node-mysql-signup-verification-api"
+      "password": "12345",
+      "database": "test"
     },
     "secret": "{7a229668-5ac7-4343-b02b-9f315eb7ad28}",
     "emailFrom": "info@node-mysql-signup-verification-api.com",
