--- a/render.yaml
+++ b/render.yaml
@@ -31,4 +31,4 @@ services:
       - key: SMTP_PASS
         sync: false
       - key: FRONTEND_URL
-        sync: false
+        value: https://computer-lab-inventory-frontend.onrender.com
