--- a/render.yaml
+++ b/render.yaml
@@ -31,4 +31,6 @@ services:
       - key: SMTP_PASS
         sync: false
       - key: FRONTEND_URL
-        value: https://computer-lab-inventory-frontend-syja.onrender.com
+        value: https://computer-lab-inventory-frontend-tedl.onrender.com
+      - key: ALLOW_ALL_ORIGINS
+        value: true
