--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "NodeJS and MySQL API for Email Sign Up with Verification, Authentication & Forgot Password",
     "license": "MIT",
     "scripts": {
-        "start": "NODE_ENV=production node ./server.js",
-        "start:dev": "nodemon ./server.js",
+        "start": "cross-env NODE_ENV=production node ./server.js",
+        "start:dev": "cross-env NODE_ENV=development DB_USER=root DB_PASSWORD=root DB_NAME=amp DB_HOST=localhost nodemon ./server.js",
         "build": "echo 'No build step required for Node.js'",
         "postinstall": "echo 'Post-install complete'"
     },
@@ -27,6 +27,7 @@
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
+        "cross-env": "^10.0.0",
         "nodemon": "^3.1.9"
     }
 }
