--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cheerio": "^1.1.2",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.2",
         "express": "^4.17.1",
         "express-jwt": "^8.5.1",
         "express-validator": "^7.2.1",
