--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-jwt": "^8.5.1",
+        "express-validator": "^7.2.1",
         "joi": "^17.2.1",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
