--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: computer-lab-inventory-backend
     env: node
     plan: free
-    buildCommand: npm install --only=production
+    buildCommand: npm ci --only=production
     startCommand: npm start
     healthCheckPath: /health
     autoDeploy: true
