--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Production config with sensitive credentials
+config.production.json
+
 # Logs
 logs
 *.log
